- added eclipse projectfiles - modified Makefile for eclipse
git-svn-id: svn://svn.mx2.eu/src/vdr-screenshot/trunk@100 5259bf9a-8594-42d9-8ea0-6982b83a2e39

--- a/HISTORY
+++ b/HISTORY
@@ -110,3 +110,5 @@ VDR Plugin 'screenshot' Revision History
 - new makefile target "srcdoc" to generate source code documentation
 - Improved the 'i18n' target in the Makefile to avoid unnecessary work as suggested by
   vdr-1.5.11
+- removed some old code from Makefile
+  
