- incremented version number for release of 0.0.13
git-svn-id: svn://svn.mx2.eu/src/vdr-screenshot/trunk@117 5259bf9a-8594-42d9-8ea0-6982b83a2e39

--- a/HISTORY
+++ b/HISTORY
@@ -114,5 +114,5 @@ VDR Plugin 'screenshot' Revision History
 
 2009-03-15: Version 0.0.13
 - fixed Makefile to create a correct named plugin library 
-  (reported by Tobias Grimm)
+  (patch provided by Tobias Grimm)
   
