--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -10,27 +10,30 @@ msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <vdr@joachim-wilke.de>\n"
 "POT-Creation-Date: 2008-03-08 22:36+0100\n"
-"PO-Revision-Date: 2008-03-08 22:17+0100\n"
-"Last-Translator: Sean Carlos <seanc@libero.it>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"PO-Revision-Date: 2009-03-17 23:43+0100\n"
+"Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
+"Language-Team:  <vdr@linuxtv.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Italian\n"
+"X-Poedit-Country: ITALY\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 msgid "Takes screenshots"
-msgstr "Scatta foto dello schermo"
+msgstr "Cattura schermate"
 
 msgid "Screenshot"
-msgstr "Stampa schermo"
+msgstr "Cattura schermo"
 
 msgid "OK - Images saved."
-msgstr "OK - Immagini salvate."
+msgstr "OK - Immagini salvate"
 
 msgid "Error"
 msgstr "Errore"
 
 msgid "Image directory"
-msgstr "Elenco immagini"
+msgstr "Directory immagini"
 
 msgid "Fileformat"
 msgstr "Formato immagine"
@@ -45,16 +48,17 @@ msgid "Image height (Pixel)"
 msgstr "Altezza immagine (Pixel)"
 
 msgid "No. of pictures to take"
-msgstr "Numero foto da scattare"
+msgstr "Numero immagini da catturare"
 
 msgid "Hide mainmenu entry"
-msgstr "Nascondi voce nel menu principale"
+msgstr "Nascondi voce menu principale"
 
 msgid "Show Date"
 msgstr "Mostra data"
 
 msgid "Enable delayed shooting"
-msgstr "Abilita scatto differito"
+msgstr "Abilita cattura differita"
 
 msgid "Delayed shooting active."
-msgstr "Scatto differito attivo."
+msgstr "Attivata cattura differita"
+
