- fixed Makefile to prevent inclusion of svn meta-data in dist files
git-svn-id: svn://svn.mx2.eu/src/vdr-screenshot/trunk@126 5259bf9a-8594-42d9-8ea0-6982b83a2e39

--- a/HISTORY
+++ b/HISTORY
@@ -118,3 +118,6 @@ VDR Plugin 'screenshot' Revision History
 
 2009: Version 0.0.14
 - updated italian translation (provided by Diego Pierotto)
+- fixed Makefile to prevent inclusion of svn meta-data in dist files
+  (thanks again to Tobias Grimm)
+  
