- adapted Makefile to VDR >= 1.7.13
git-svn-id: svn://svn.mx2.eu/src/vdr-screenshot/trunk@404 5259bf9a-8594-42d9-8ea0-6982b83a2e39

--- a/HISTORY
+++ b/HISTORY
@@ -120,4 +120,6 @@ VDR Plugin 'screenshot' Revision History
 - updated italian translation (provided by Diego Pierotto)
 - fixed Makefile to prevent inclusion of svn meta-data in dist files
   (thanks again to Tobias Grimm)
+- adapted Makefile to VDR >= 1.7.13
+
   
