--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,10 +9,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <vdr@joachim-wilke.de>\n"
-"POT-Creation-Date: 2008-03-08 22:36+0100\n"
+"POT-Creation-Date: 2012-03-11 13:37+0100\n"
 "PO-Revision-Date: 2009-03-17 23:43+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team:  <vdr@linuxtv.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -61,4 +62,3 @@ msgstr "Abilita cattura differita"
 
 msgid "Delayed shooting active."
 msgstr "Attivata cattura differita"
-
