--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -10,10 +10,10 @@ msgstr ""
 "POT-Creation-Date: 2012-03-11 13:37+0100\n"
 "PO-Revision-Date: 2008-03-08 22:17+0100\n"
 "Last-Translator: Ruben Nunez Francisco <ruben.nunez@tang-it.com>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
-"Language: \n"
+"Language-Team: Spanish <vdr@linuxtv.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Takes screenshots"
