--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -12,8 +12,8 @@ msgstr ""
 "POT-Creation-Date: 2012-03-11 13:37+0100\n"
 "PO-Revision-Date: 2009-03-17 23:43+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
-"Language-Team:  <vdr@linuxtv.org>\n"
-"Language: \n"
+"Language-Team: Italian <vdr@linuxtv.org>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
