--- a/po/tr_TR.po
+++ b/po/tr_TR.po
@@ -10,10 +10,10 @@ msgstr ""
 "POT-Creation-Date: 2012-03-11 13:37+0100\n"
 "PO-Revision-Date: 2008-03-08 22:17+0100\n"
 "Last-Translator: Oktay Yolgecen <oktay_73@yahoo.de>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
-"Language: \n"
+"Language-Team: Turkish <vdr@linuxtv.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-9\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Takes screenshots"
